--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Belajar Git</title>
 </head>
 <body>
-    
+   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis, ut.</p> 
 </body>
 </html>
